crates/parser/src/snapshots/squawk_parser__parse__tests__unlisten_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: UnlistenStmt(
                Object({
                    "conditionname": String(
                        "virtual",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                17,
            ),
        },
    ],
)
